// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test SpeedBlock should render correctly when has low speed warning 1`] = `
<div>
  <div
    class="panel default"
  >
    <span
      class="title"
    >
      speed
    </span>
    <div>
      MockUnitInput
      <p>
        id: 
        speed
      </p>
      <p>
        min: 
        1
      </p>
      <p>
        max: 
        300
      </p>
      <p>
        unit: 
        mm/s
      </p>
      <p>
        defaultValue: 
        1
      </p>
      <p>
        decimal: 
        1
      </p>
      <p>
        displayMultiValue: 
      </p>
    </div>
    <input
      class="speed-for-vector"
      id="speed_value"
      max="300"
      min="1"
      step="0.1"
      type="range"
      value="1"
    />
  </div>
</div>
`;

exports[`test SpeedBlock should render correctly when has vector warning 1`] = `
<div>
  <div
    class="panel default"
  >
    <span
      class="title"
    >
      speed
    </span>
    <div>
      MockUnitInput
      <p>
        id: 
        speed
      </p>
      <p>
        min: 
        1
      </p>
      <p>
        max: 
        300
      </p>
      <p>
        unit: 
        mm/s
      </p>
      <p>
        defaultValue: 
        87
      </p>
      <p>
        decimal: 
        1
      </p>
      <p>
        displayMultiValue: 
      </p>
    </div>
    <input
      class="speed-for-vector"
      id="speed_value"
      max="300"
      min="1"
      step="0.1"
      type="range"
      value="87"
    />
    <div
      class="warning"
    >
      <div
        class="warning-icon"
      >
        !
      </div>
      <div
        class="warning-text"
      >
        speed_contrain_warning
      </div>
    </div>
  </div>
</div>
`;

exports[`test SpeedBlock should render correctly when type is panel-item 1`] = `
<div>
  <div>
    MockObjectPanelItem
    <div>
      id: 
      speed
    </div>
    <div>
      content: 
      <button
        class="adm-button adm-button-default adm-button-fill-outline adm-button-mini adm-button-shape-rounded number-item display-btn"
        type="button"
      >
        <span>
          87
        </span>
      </button>
    </div>
    <div>
      label: 
      speed
    </div>
  </div>
</div>
`;

exports[`test SpeedBlock should render correctly when unit is inches 1`] = `
<div>
  <div
    class="panel default"
  >
    <span
      class="title"
    >
      speed
    </span>
    <div>
      MockUnitInput
      <p>
        id: 
        speed
      </p>
      <p>
        min: 
        1
      </p>
      <p>
        max: 
        300
      </p>
      <p>
        unit: 
        in/s
      </p>
      <p>
        defaultValue: 
        87
      </p>
      <p>
        decimal: 
        2
      </p>
      <p>
        displayMultiValue: 
      </p>
    </div>
    <input
      class=""
      id="speed_value"
      max="300"
      min="1"
      step="0.1"
      type="range"
      value="87"
    />
  </div>
</div>
`;

exports[`test SpeedBlock should render correctly when unit is mm 1`] = `
<div>
  <div
    class="panel default"
  >
    <span
      class="title"
    >
      speed
    </span>
    <div>
      MockUnitInput
      <p>
        id: 
        speed
      </p>
      <p>
        min: 
        1
      </p>
      <p>
        max: 
        300
      </p>
      <p>
        unit: 
        mm/s
      </p>
      <p>
        defaultValue: 
        87
      </p>
      <p>
        decimal: 
        1
      </p>
      <p>
        displayMultiValue: 
      </p>
    </div>
    <input
      class=""
      id="speed_value"
      max="300"
      min="1"
      step="0.1"
      type="range"
      value="87"
    />
  </div>
</div>
`;
